# fast_multi_tenant

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.env  debug_db.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ca12735a7e5a_row_level_isolation_baseline.py
app/: main.py  seed.py
app/api/v1/endpoints/: tenants.py
app/core/: config.py  tenant_context.py
app/database/: base.py  session.py
app/middleware/: tenant_gate.py
app/models/: __init__.py  role.py  tenant.py  user.py
app/schemas/: tenant.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
