[tool.poetry]
name = "multi-tenant-platform"
version = "0.1.0"
description = "High-performance Multi-tenant SaaS Scaffold with Schema Isolation"
authors = ["Khushal Singh Chauhan <khushal.jobss@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.12.0"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.46"
alembic = "^1.18.3"
psycopg = {extras = ["binary"], version = "^3.3.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: marks tests that require a live Postgres instance",
    "unit: marks pure unit tests with no external deps",
]
pythonpath = ["."]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "app/__pycache__/*",
    "app/seed.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]


show_missing = true
skip_covered = false